--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ sidebar-about-description: "简单的描述一下你自己"
 
 #featured tags
 featured-tags: true
-featured-condition-size:1
+#featured-condition-size:1
